# AgenticAI_AstraHeal

./: .env.example  .gitignore  .project-config.example.json  BUILD_MANIFEST.json  BUILD_VALIDATION_REPORT.md  LOCAL_VM_PARALLEL_SHARDING_NOTES.md  README.md  README_ENTERPRISE_MANDATORY.md  README_FIRST.md  RUN_GUI_FIRST.py  RUN_WORKER_AGENT.py  START_GUI_CENTRAL_VM_MAC.sh  START_GUI_CENTRAL_VM_WINDOWS.cmd  START_GUI_CENTRAL_VM_WINDOWS.ps1  START_GUI_LOCAL_MAC.sh  START_GUI_LOCAL_WINDOWS.cmd  START_GUI_LOCAL_WINDOWS.ps1  START_GUI_VM_WITH_WORKERS_MAC.sh  START_GUI_VM_WITH_WORKERS_WINDOWS.cmd  START_GUI_VM_WITH_WORKERS_WINDOWS.ps1  START_HERE_GUI_FIRST.txt  START_WORKER_AGENT_MAC.sh  START_WORKER_AGENT_WINDOWS.cmd  START_WORKER_AGENT_WINDOWS.ps1  pyproject.toml  requirements-enterprise.txt  requirements.txt  setup.py  worker-agent.env.example
api-collections/: README.md
configs/: ai-heavy-lifting-policy.example.json  central-vm177.example.env  reference-framework-profiles.json  self-healing-policy.json  vdi-runtime-profile.example.json  worker-agent.vm135.example.env  worker-agent.vm45.example.env  worker-execution-modes.example.json  worker-nodes.central-source.example.json
docs/: 00_README_CLEAN_STARTUP.md  01_LOCAL_PC_WORKFLOW.md  02_CENTRAL_VM_ONLY_WORKFLOW.md  03_VM177_WITH_VM45_VM135_WORKERS.md  04_AI_PROVIDER_CONFIGURATION.md  05_WORKER_AGENT_REFERENCE.md  06_STARTUP_SCRIPTS_REFERENCE.md  07_VALIDATION_AND_TROUBLESHOOTING.md  08_EXISTING_FEATURES_PRESERVED.md  09_OPENAI_404_PROVIDER_DIAGNOSTICS.md  09_PROVIDER_CONFIRMATION_FIX.md  (+39 more)
mcp/: enterprise-mcp.json  (+1 more)
(+309 files in other folders)
