[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-ai-automation-pipeline"
version = "0.4.3"
description = "Python Agentic AI QA Pipeline with GUI and reuse-aware Playwright generation"
requires-python = ">=3.11,<3.14"
dependencies = [
  "pydantic>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "requests>=2.32,<3",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "python-multipart>=0.0.9,<1",
  "pypdf>=4.2,<6",
  "python-docx>=1.1,<2",
  "openpyxl>=3.1,<4"
]

[project.scripts]
qa-pipeline = "qa_pipeline.cli:main"

[tool.setuptools]
packages = {find = {include = ["qa_pipeline*"]}}
